fix overflow

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -175,6 +175,13 @@ main{
 	margin-top: 5px;
 	margin-bottom: 5px;
 }
+
+.languages-and-tools-container{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
 .languages-container{
 	display: flex;
 	justify-content: center;
@@ -233,6 +240,11 @@ main{
 	padding-top: 50px;
 	padding-bottom: 50px;
 	line-height: 3;
+	li{
+		margin-left: 15px;
+		list-style-type: none;
+		word-wrap: break-word;
+	}
 		a{
 		color: darken($accent-blue, 15);
 	}
